# pip-tree

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  Makefile  README.md  justfile  pyproject.toml  setup.py
.github/workflows/: build.yml  homebrew.yml  pypi.yml  release.yml
legacy/: pippin.sh
pip_tree/: __init__.py  cli.py  tree.py
pippin/: __init__.py  pip.py
src/: pippin.sh
test/unit/: conftest.py  test_pip.py  test_tree.py
